tests/miniJava/neg/000073_mutation.MiniJava
class java { Main public static void Main ( String [ ] java ) { { } } }
